Secret Page Code Along Pt. 5

--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,3 +1,7 @@
 <h1>Welcome, user!</h1>
 
 <p>This is a restricted area. Only authorized users are allowed!</p>
+
+<li><a href="/register">Sign Up!</a></li>
+<li><a href="/login">Login!</a></li>
+<li><a href="/logout">Logout!</a></li>
